2004-02-27  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp (sp_stroke_style_set_marker_buttons):
	Cleanup: restructure.

	* src/dialogs/Makefile.am: in-dt-coordsys.cpp, in-dt-coordsys.h:
	New files.
	* src/dialogs/xml-tree.cpp (set_dt_select): Fix bug when clicked on a
	shape that's a descendent of a <defs> node: don't try to select it
	in the canvas.

2004-02-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp:
	Fix: free marker_xpm[i] instead of marker_xpm.
	Misc cleanups.

	* src/Makefile.am: New files extract-uri.cpp, extract-uri.h.
	New unit test extract-uri-test.cpp.
	* src/style.cpp (extract_uri): Move to src/extract-uri.cpp, and fix.

	* src/Makefile.am (inkscapelib_src):
	marker-status.h, marker-status.cpp: New files.
	* src/dialogs/stroke-style.cpp, src/sp-shape.cpp, src/style.cpp:
	Change marker debugging status messages from conditional g_message
	to unconditional marker_status call.

	* src/dialogs/stroke-style.cpp (marker_id_to_string):
	Remove unused function.

2004-02-24  Alexander Clausen <alex@skip86.com>
	
	* src/desktop-events.cpp: Fix crash when opening the guide dialog for
	the second time

2004-02-24  bulia byak <bulia@users.sourceforge.net>

	* src/helper/sodipodi-ctrlrect.cpp: A smart always-visible inversion for ctrlrect border 

	* src/select-toolbar.cpp: Fix for 873723

	* src/style.h src/style.cpp: write_difference only writes what is .set in the target style

	* src/selection-chemistry.cpp: Paste style merges the style of the clipboard
	with the object's current style

	* src/xml/repr-io.cpp: Do not cut leading/trailing whitespace on text nodes,
	only reject all-whitespace nodes

	* src/pixmaps/handles.xpm src/seltrans.cpp src/knot.cpp src/nodepath.cpp
	src/helper/sodipodi-ctrl.cpp: Changed xor compositing for ctrls, made seltrans
	handles inverse, tweaked knot colors

	* doc/keys-html.xsl doc/keys.html: keys.html now validates
